Attempt to reproduce angular-redux/store#427

--- a/src/app/component.html
+++ b/src/app/component.html
@@ -8,5 +8,7 @@
 </nav>
 
 <content>
-  <router-outlet></router-outlet>
+  <!--<router-outlet></router-outlet>-->
+  <button (click)="testForLeaks()">Leak, baby, leak</button>
+  <button (click)="cleanUp()">Clean up</button>
 </content>
