--- a/src/app/animals/animal/component.html
+++ b/src/app/animals/animal/component.html
@@ -1,5 +1,5 @@
 <div>{{ name$ | async }}</div>
-<div>{{ ticketPrice$ | async }}</div>
+<div>{{ ticketPrice$ | async }} asdas asdasd</div>
 <div>
   <zoo-counter
     [count]="numTickets$ | async"
